Sucka a thing, probably a popsicle

--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     </head>
     <body>
         <img src="https://github.com/hackclub/dinosaurs/raw/master/smart_dinosaur_docs.png">
-        <h1>Project Orpheus</h1>
-        <p>Coder Dino</p>
-        <p>Will code for food</p>
+        <h1>Alex Mulvin</h1>
+        <p>Mulvin Prime</p>
+        <p>Want to know about me? Look it up</p>
+        <p>Currently doing things that aren't involving you or your life, so why do you care?</p>
+        <p>Go back to your normal, probably boring life.</p>    
     </body>
 </html>
