--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         <link rel="stylesheet" href="styles.css"/>
     </head>
     <body>
-        <img src="https://github.com/hackclub/dinosaurs/raw/master/smart_dinosaur_docs.png">
+        <img src=C:\Users\amulv\Downloads\Youtube logo.png>
         <h1>Alex Mulvin</h1>
         <p>Mulvin Prime</p>
         <p>Want to know about me? Look it up</p>
