--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <body>
         <h1>Alex Mulvin</h1>
         <p>Mulvin Prime</p>
-        <p>Want to know about me? Look it up</p>
+        <p>Want to know about me? Look me up. You won't find much</p>
         <p>Currently doing things that aren't involving you or your life, so why do you care?</p>
         <p>Go back to your normal, probably boring life.</p>    
     </body>
